# dojo-bot

./: LICENSE  README.md  pyproject.toml
MadWizardBot/: new_bot_agent.py  system_prompts.py
src/: main.py
src/commands/: dojo.py
